# stanford-affils

./: .ebignore  .env.template  .gitignore  .mdformat.toml  CONTRIBUTING.md  LICENSE.md  Pipfile  Procfile  README.md  SECURITY.md  pyproject.toml  requirements.txt  tasks.py
doc/: README.md  (+10 more)
src/: __init__.py  affiliation.py  affiliation_test.py  app.py  app_test.py  main.py  main_test.py  manage.py  pyproject.toml  user.py
src/affiliations/: admin.py  apps.py  models.py  renderers.py  serializers.py  tests.py  urls.py  views.py
src/affiliations/migrations/: 0001_initial.py  0002_affiliation_coordinator_email.py  0003_rename_family_affiliation_cdwg.py  0004_rename_cdwg_affiliation_clinical_domain_working_group.py  0005_rename_name_affiliation_abbreviated_name_and_more.py  0006_alter_affiliation_status.py  0007_alter_affiliation_status.py  0008_alter_affiliation_status.py  0009_alter_affiliation_abbreviated_name.py  0010_remove_affiliation_coordinator_and_more.py  0011_alter_coordinator_affiliation.py  0012_remove_affiliation_approvers_approver.py  0013_remove_affiliation_clinvar_submitter_ids_submitter.py  0014_rename_clinvar_submitter_id_submitter_submitter_id.py  0015_rename_submitter_id_submitter_clinvar_submitter_id.py  0016_affiliation_curation_panel_id.py  0017_alter_affiliation_affiliation_id_and_more.py  (+19 more)
src/main/: asgi.py  settings.py  urls.py  wsgi.py
src/scripts/: affils_compare.py  csv_load.py  json_load.py  load.py
src/sql/: dump.sql  schema.sql
src/static/: simple.css
src/templates/: base.html  edit.html  index.html  login.html  signup.html
(+11 files in other folders)
