[tool.poetry]
name = "affiliations"
version = "0.1.0"
description = "Affiliation Service"
authors = ["sanchegm <sanchegm@stanford.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django-unfold = "^0.33.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
